# websocket_p21

./: .gitignore  pyproject.toml
apps/: consumers.py  middleware.py  models.py  routings.py  serializers.py  urls.py  views.py
apps/migrations/: 0001_initial.py  0002_rename_content_message_text.py
root/: asgi.py  drf_settings.py  settings.py  urls.py  wsgi.py
templates/chat/: room.html
